add/remove access nodes by peer name
